tests/files/lexer_tests/should_fail/079.cmdr
//Should not lex since no variable
fn () hi;